forgot about card name
add it

--- a/src/templates/product-cards.hbs
+++ b/src/templates/product-cards.hbs
@@ -4,7 +4,7 @@
             <img src={{image}} alt={{name}} class="card__image" />
     
             <div class="card__content">
-                <h2 class="card__name">Картофель, запеченный в мундире</h2>
+                <h2 class="card__name">{{name}}</h2>
                 <p class="card__price">
                     <i class="material-icons"> monetization_on </i>
                     {{price}} кредитов
